corrected several mistakes, mostly typos
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1712 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/epsfile.tex
+++ b/manual/epsfile.tex
@@ -1,6 +1,6 @@
 \chapter{Module epsfile: EPS file inclusion}
 
-With help of the \verb|epsfile.epsfile| class, you can easily embed
+With the help of the \verb|epsfile.epsfile| class, you can easily embed
 another EPS file in your canvas, thereby scaling, aligning the content
 at discretion. The most simple example looks like
 \begin{quote}
