--- a/manual/axis.tex
+++ b/manual/axis.tex
@@ -1,8 +1,9 @@
 \chapter{Axes\label{axis}}
 
-Axes are a fundamental component of graphs although there might be use
-cases outside of the graph system. Internally axes are constructed out
-of components, which handle different tasks and axis need to fullfill:
+Axes are a fundamental component of graphs although there might be 
+applications outside of the graph system. Internally axes are 
+constructed out of components, which handle different tasks axes 
+need to fulfill:
 
 \begin{definitions}
 \term{axis}
@@ -20,16 +21,16 @@ of components, which handle different tasks and axis need to fullfill:
 \term{texter}
   Creates labels for ticks when they are not set manually.
 \term{painter}
-  Responsible to paint the axis.
+  Responsible for painting the axis.
 \term{rater}
   Calculate ratings, which can be used to select the best suitable
   partitioning.
 \end{definitions}
 
-The names above map directly to modules, which are provided in the
-directory \file{graph/axis}. Sometimes it might be conventient to
-import the axis directory directly rather access them through the
-graph. This would look like:
+The names above map directly to modules which are provided in the
+directory \file{graph/axis}. Sometimes it might be convenient to
+import the axis directory directly rather than to access iit through 
+the graph. This would look like:
 \begin{verbatim}
   from pyx import *
   graph.axis.painter() # and the like
@@ -42,7 +43,7 @@ In most cases different implementations are available through
 different classes, which can be combined in various ways. There are
 various axis examples distributed with \PyX{}, where you can see some
 of the features of the axis with a few lines of code each. Hence we
-can here directly step on to the reference of the available
+can here directly come to the reference of the available
 components.
 
 \section{Axes}
@@ -58,8 +59,8 @@ The position of an axis is defined by an instance of a class providing
 the following methods:
 
 \begin{methoddesc}[axispos]{basepath}{x1=None, x2=None}
-  Returns a path instance for the the base path. \var{x1} and \var{x2}
-  are the axis range, the base path should cover.
+  Returns a path instance for the base path. \var{x1} and \var{x2}
+  define the axis range, the base path should cover.
 \end{methoddesc}
 
 \begin{methoddesc}[axispos]{vbasepath}{v1=None, v2=None}
@@ -67,7 +68,7 @@ the following methods:
 \end{methoddesc}
 
 \begin{methoddesc}[axispos]{gridpath}{x}
-  Returns a path instance for the the grid path at position \var{x}.
+  Returns a path instance for the grid path at position \var{x}.
   Might return \code{None} when no grid path is available.
 \end{methoddesc}
 
@@ -93,20 +94,19 @@ the following methods:
 \end{methoddesc}
 
 Instances of the following classes can be passed to the \var{**axes}
-keyword arguments of a graph. Those instances should be used once
-only.
+keyword arguments of a graph. Those instances should only be used once.
 
 \begin{classdesc}{linear}{min=None, max=None, reverse=0, divisor=None, title=None,
                           parter=parter.autolinear(), manualticks=[],
                           density=1, maxworse=2, rater=rater.linear(),
                           texter=texter.mixed(), painter=painter.regular()}
-  This class provides a linear axis. \var{min} and \var{max} are the
+  This class provides a linear axis. \var{min} and \var{max} define the
   axis range. When not set, they are adjusted automatically by the
   data to be plotted in the graph. Note, that some data might want to
   access the range of an axis (\emph{e.g.} the \class{function} class
   when no range was provided there) or you need to specify a range
   when using the axis without plugging it into a graph (\emph{e.g.}
-  when drawing a axis along a path).
+  when drawing an axis along a path).
 
   \var{reverse} can be set to indicate a reversed axis starting with
   bigger values first. Alternatively you can fix the axis range by
@@ -116,7 +116,7 @@ only.
   factor by that. \var{title} is the title of the axis.
 
   \var{parter} is a partitioner instance, which creates suitable ticks
-  for the axis range. Those ticks are merged with manual given ticks
+  for the axis range. Those ticks are merged with ticks manually given 
   by \var{manualticks} before proceeding with rating, painting
   \emph{etc.} Manually placed ticks win against those created by the
   partitioner. For automatic partitioners, which are able to calculate
@@ -126,7 +126,7 @@ only.
   unappropriate or not at all valid in terms of rating label
   distances). But within a range of say 0.5 to 2 (even bigger for
   large graphs) it can help to get less or more ticks than the default
-  would lead to. \var{maxworse} is a the number of trials with more
+  would lead to. \var{maxworse} is the number of trials with more
   and less ticks when a better rating was already found. \var{rater}
   is a rater instance, which rates the ticks and the label distances
   for being best suitable. It also takes into account \var{density}.
@@ -163,14 +163,14 @@ This class is an abbreviation of \class{logarithmic} described above.
 \begin{classdesc}{linked}{linkedaxis, painter=painter.linked()}
   This class provides an axis, which is linked to another axis
   instance. This means, it shares all its properties with the axis it
-  is linked too except for the painter. Thus a linked axis is painted
+  is linked to except for the painter. Thus a linked axis is painted
   differently.
 
-  A standard use case are the \code{x2} and \code{y2} axes in an
+  A standard application are the \code{x2} and \code{y2} axes in an
   x-y-graph. Linked axes to the \code{x} and \code{y} axes are created
   automatically when not disabled by setting those axes to
   \code{None}. By that, ticks are stroked at both sides of an
-  x-y-graph. However, linked axes can be used for in other cases as
+  x-y-graph. However, linked axes can be used in other cases as
   well. You can link axes within a graph or between different graphs
   as long as the orgininal axis is finished first (it must fix its
   layout first).
@@ -180,14 +180,14 @@ This class is an abbreviation of \class{logarithmic} described above.
                          splitdist=0.1, relsizesplitdist=1,
                          title=None, painter=painter.split()}
   This class provides an axis, splitting the input values to its
-  subaxes depeding on the range of the subaxes. Thus the subaxes
+  subaxes depending on the range of the subaxes. Thus the subaxes
   need to have fixed range, up to the minimum of the first axis and
   the maximum of the last axis. \var{subaxes} actually takes the list
-  of subaxes. \var{splitlist} defines the positions of the spliting
+  of subaxes. \var{splitlist} defines the positions of the splitting
   in graph coordinates. Thus the length of \var{subaxes} must be the
   length of \var{splitlist} plus one. If an entry in \var{splitlist}
   is \code{None}, the axes aside define the split position taking into
-  account the ratio of the axes ranges (meassured by an internal
+  account the ratio of the axes ranges (measured by an internal
   \code{relsize} attribute of each axis).
 
   \var{splitdist} is the space reserved for a splitting in graph
@@ -230,23 +230,23 @@ This class is an abbreviation of \class{logarithmic} described above.
   subaxis. When others has only one entry, it is passed as a value,
   otherwise as a list. The result of the conversion done by the
   subaxis is mapped into the graph coordinate range for this discrete
-  value. When neigher \var{subaxis} nor \var{multisubaxis} is set,
-  others must be a single value in range [0:1]. This value is used for
-  the position at the subaxis without converion.
+  value. When neither \var{subaxis} nor \var{multisubaxis} is set,
+  others must be a single value in the range [0:1]. This value is used 
+  for the position at the subaxis without conversion.
 
   When \var{subaxis} is set, it is used for the conversion of others.
   When \var{multisubaxis} is set, it must be an instance of \var{bar}
-  as well. It is than dublicated for each of the discrete values
+  as well. It is then duplicated for each of the discrete values
   allowed for the axis. By that, you can create nested bar axes with
-  a different discrete values for each discrete value of the axis. It
+  different discrete values for each discrete value of the axis. It
   is not allowed to set both, \var{subaxis} and \var{multisubaxis}.
 
   \var{dist} is used as the spacing between the ranges for each
   distinct value. It is measured in the same units as the subaxis
-  results, thus the default value of \code{0.5} means halve the width
+  results, thus the default value of \code{0.5} means half the width
   between the distinct values as the width for each distinct value.
   \var{firstdist} and \var{lastdist} are used before the first and
-  after the last value. When set to \code{None}, halve of \var{dist}
+  after the last value. When set to \code{None}, half of \var{dist}
   is used.
 
   \var{title} is the title of the split axes and \var{painter} is a
@@ -292,7 +292,7 @@ The following classes are part of the module \module{graph.axis.tick}.
   \end{itemize}
 
   \var{power} is an integer to calculate \code{\var{x}**\var{power}}.
-  This is usefull at certain places in partitioners.
+  This is useful at certain places in partitioners.
 \end{classdesc}
 
 \begin{classdesc}{tick}{x, ticklevel=0, labellevel=0, label=None,
@@ -475,8 +475,8 @@ This class is an abbreviation of \class{autologarithmic} described above.
 The following classes are part of the module \module{graph.axis.texter}.
 Instances of the classes can be passed to the texter keyword argument
 of regular axes. Texters are used to define the label text for ticks,
-which request to have a label, but not label text was specified
-actually. A typical case are ticks created by partitioners described
+which request to have a label, but for which no label text has been specified
+so far. A typical case are ticks created by partitioners described
 above.
 
 \begin{classdesc}{decimal}{prefix="", infix="", suffix="", equalprecision=0,
@@ -486,7 +486,7 @@ above.
   Instances of this class create decimal formatted labels.
 
   The strings \var{prefix}, \var{infix}, and \var{suffix} are added to
-  the label at the begin, immediately after the plus or minus, and at
+  the label at the beginning, immediately after the plus or minus, and at
   the end, respectively. \var{decimalsep}, \var{thousandsep}, and
   \var{thousandthpartsep} are strings used to separate integer from
   fractional part and three-digit groups in the integer and fractional
@@ -498,7 +498,7 @@ above.
   contain one string insert operators \samp{\%s} for the period.
 
   \var{labelattrs} is a list of attributes to be added to the label
-  attributes given in the painter. It should be used to setup TeX
+  attributes given in the painter. It should be used to setup \TeX{}
   features like \code{text.mathmode}. Text format options like
   \code{text.size} should instead be set at the painter.
 \end{classdesc}
@@ -578,7 +578,7 @@ above.
   Instances of this class create labels formated as fractions.
 
   The strings \var{prefix}, \var{infix}, and \var{suffix} are added to
-  the label at the begin, immediately after the plus or minus, and at
+  the label at the beginning, immediately after the plus or minus, and at
   the end, respectively. The strings \var{prefixnum},
   \var{infixnum}, and \var{suffixnum} are added to the labels
   numerator accordingly whereas \var{prefixdenom}, \var{infixdenom},
@@ -612,7 +612,7 @@ above.
   into account \var{denomprefix}, \var{denominfix}, \var{denomsuffix}
   \var{minuspos} and the sign of the number.
 
-  \var{labelattrs} has the same meaning than for \var{decimal}.
+  \var{labelattrs} has the same meaning as for \var{decimal}.
 \end{classdesc}
 
 \section{Painter}
@@ -633,8 +633,8 @@ passed to the painter keyword argument of regular axes.
   exceeded before an 180 degree rotation is performed.
 \end{classdesc}
 
-The following two class variables are initialized with the most common
-use case:
+The following two class variables are initialized for the most common
+applications:
 
 \begin{memberdesc}{parallel}
   \code{rotatetext(90)}
@@ -656,8 +656,9 @@ tick stroking. They are named \code{ticklength.SHORT},
 \code{ticklength.normal}, \code{ticklength.long}, \dots,
 \code{ticklength.LONG}. \code{ticklength.normal} is initialized with
 a length of \code{0.12} and the reciprocal of the golden mean as
-\code{factor} whereas the others have a modified inital value by
-multiplication or division by multiples of $\sqrt{2}$ appropriately.
+\code{factor} whereas the others have a modified initial value
+obtained by multiplication with or division by appropriate multiples of 
+$\sqrt{2}$.
 
 \begin{classdesc}{regular}{innerticklength=ticklength.normal,
                            outerticklength=None,
@@ -702,7 +703,7 @@ multiplication or division by multiples of $\sqrt{2}$ appropriately.
   horizontal axes, respectively.
 
   \var{titledist} is the distance of the title from the rest of the
-  axis as a visual \PyX{}. \var{titleattrs} is a list of text
+  axis as a visual \PyX{} length. \var{titleattrs} is a list of text
   attributes for the title. It is merged with
   \samp{[text.halign.center, text.vshift.mathaxis]}.
   \var{titledirection} is an instance of \var{rotatetext} to rotate
@@ -781,10 +782,10 @@ multiplication or division by multiples of $\sqrt{2}$ appropriately.
   Instances of this class are suitable painters for bar axes.
 
   \var{innerticklength} and \var{outerticklength} are visual \PyX{}
-  length to mark the different bar regions along the axis inside and
+  lengths to mark the different bar regions along the axis inside and
   outside of the graph. \code{None} turns off the ticks inside and
   outside the graph, respectively. \var{tickattrs} are stroke
-  attributes for the ticks or \code{None} to turns all ticks off.
+  attributes for the ticks or \code{None} to turn all ticks off.
 
   The parameters with prefix \var{name} are identical to their
   \var{label} counterparts in \class{regular}. All other parameters have
@@ -818,16 +819,16 @@ multiplication or division by multiples of $\sqrt{2}$ appropriately.
 
 The rating of axes is implemented in \module{graph.axis.rater}. When
 an axis partitioning scheme returns several partitioning
-possibilities, the partitions needs to be rated by a positive number.
-The lowest rated axis partitioning is considered best.
+possibilities, the partitions need to be rated by a positive number.
+The axis partitioning rated lowest is considered best.
 
 The rating consists of two steps. The first takes into account only
 the number of ticks, subticks, labels and so on in comparison to
 optimal numbers. Additionally, the extension of the axis range by
 ticks and labels is taken into account. This rating leads to a
 preselection of possible partitions. In the second step, after the
-layout of prefered partitionings is calculated, the distance of the
-labels in a partition is taken into account as well at a smaller
+layout of preferred partitionings has been calculated, the distance of 
+the labels in a partition is taken into account as well at a smaller
 weight factor by default. Thereby partitions with overlapping labels
 will be rejected completely. Exceptionally sparse or dense labels will
 receive a bad rating as well.
@@ -839,7 +840,7 @@ receive a bad rating as well.
   to the result.
 
   The rater calculates
-  \code{\var{widht}*((x-\var{opt})/(other-\var{opt}))**3} to rate the
+  \code{\var{width}*((x-\var{opt})/(other-\var{opt}))**3} to rate the
   value \code{x}, where \code{other} is \var{left}
   (\code{x}\textless\var{opt}) or \var{right}
   (\code{x}\textgreater\var{opt}).
