fix insertion of a zero length path
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1714 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -109,6 +109,12 @@ TODO:
   - graph modules:
     - enum -> num renaming
 
+0.6.3 (xxxx/xx/xx):
+   - graph module:
+     - fix drawing with background
+     - fix insertion of a zero length path when the whole line is outside
+       the valid axis range (reported by Marko Vendelin)
+
 0.6.2 (2004/04/07):
   - graph module:
     - fixed title=None + graph key issue reported by Gabriel Vasseur
