--- a/CHANGES
+++ b/CHANGES
@@ -67,11 +67,14 @@ TODO:
     - describe creation and modification (inplace and ``modify by new'') of
       graph data
 
-0.6.3 (xxxx/xx/xx):
+0.6.3 (2004/04/27):
    - graph module:
      - fix drawing with background
      - fix insertion of a zero length path when the whole line is outside
        the valid axis range (reported by Marko Vendelin)
+   - distribution:
+     - include source for faq and manual
+     - distribute the pdf instead of postscript (manual, faq, examples)
 
 0.6.2 (2004/04/07):
   - graph module:
