pathel -> pathitem renaming
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1728 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -107,6 +107,9 @@ TODO:
       and the global pyxrc
   - graph modules:
     - enum -> num renaming
+  - path module:
+    - pathel -> pathitem, etc. renaming 
+  
 
 0.6.3 (2004/04/27):
    - graph module:
