Xd -> dX (reported by Alex Wilson)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1729 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -528,9 +528,9 @@ method of a graph. The classes are implemented in \module{graph.style}.
   \begin{tableii}{l|l}{}{data name}{description}
     \lineii{\code{Xmin}}{minimal value}
     \lineii{\code{Xmax}}{maximal value}
-    \lineii{\code{Xd}}{minimal and maximal delta}
-    \lineii{\code{Xdmin}}{minimal delta}
-    \lineii{\code{Xdmax}}{maximal delta}
+    \lineii{\code{dX}}{minimal and maximal delta}
+    \lineii{\code{dXmin}}{minimal delta}
+    \lineii{\code{dXmax}}{maximal delta}
   \end{tableii}
 
   Minimal and maximal values are calculated from delta by subtracting
