date in pyx/version.py added
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1740 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -4,11 +4,9 @@
 % \includeonly{graph}
 
 \usepackage{pyx}
-\ifhtml % redefine the PyX macro for html (the other makes trouble)
-\def\PyX{PyX}
-\fi
-\ifhtml % make double quotes available in html
-\def\textquotedbl{"}
+\ifhtml
+\def\PyX{PyX} % redefine the PyX macro for html (the other makes trouble)
+\def\textquotedbl{"} % make double quotes available in html
 \fi
 \usepackage{graphicx}
 \usepackage[T1]{fontenc}
@@ -19,7 +17,7 @@
 \author{J\"org Lehmann\\
 Andr\'e Wobst}
 \authoraddress{http://pyx.sourceforge.net/}
-\date{\today}
+\date{\input{pyxdate.tex}}
 \release{\input{pyxversion.tex}}
 
 \makeindex
